ci: switch to ubi-minimal